2012-01-02  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in term/qt.trm
	In src/qtterminal: QtGnuplotEvent.cpp QtGnuplotEvent.h
	QtGnuplotItems.cpp QtGnuplotItems.h QtGnuplotScene.cpp
	QtGnuplotScene.h QtGnuplotSettings.ui QtGnuplotWidget.cpp
	QtGnuplotWidget.h qt_term.cpp qt_term.h README.Qt:
	Update qt terminal to support pointsize, dashed lines, round linejoins,
	term->layer(), LT_BACKGROUND, mouse toggling, faster rendering.

2012-01-01  Ethan A Merritt  <merritt@u.washington.edu>

	* src/qtterminal/QtGnuplotApplication.cpp (processEvent):
	* src/wxterminal/wxt_gui.cpp (wxt_atexit):
	In "persist" mode, if all qt plot windows were already closed when the
	main program exited then the daughter process would become a zombie.
	Even worse for wxt; if _any_ plot windows had been closed then the 
	persisting daughter process would become a zombie.
	Bugfix.

2011-12-29  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot.c src/plot.h src/qtterminal/qt_term.cpp:
	Provide a function cancel_history() that can be called by terminal
	helper processes after forking so that the history file isn't 
	trashed on exit.
	Bug #2950711

	* docs/gnuplot.doc:  Minor updates to match 4.6 configuration.

2011-12-28  Ethan A Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc share/Makefile.am share/colors_default.gp
	share/colors_mono.gp share/colors_podo.gp share/gnuplotrc
	src/Makefile.am:
	Provide template initialization files, including examples of customizing
	the linetype color sequence.  These are installed in $GNUPLOT_SHARE_DIR
	(usually /usr/local/share/gnuplot/4.6).

	* src/command.c src/datafile.c src/help.c src/history.c src/misc.c
	src/plot.c src/plot.h src/term.c src/variable.c:
	Do not allow execution of system(), shell, or popen() commands in the
	initialization files.

	* src/plot.c show/plot.c: More compact splash page.

	* src/graphics.c src/graphics.h src/graph3d.c:
	Strangely, the final parameter of place_objects(,,,clip_area) was