@@ -1,3 +1,8 @@
+2012-01-04  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* src/hidden3d.c: Fix an uninitialized colorspec found by valgrind.
+	The trigger was hidden3d handling of '... with labels tc palette'.
+
 2012-01-02  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* configure.in term/qt.trm
